Add Jupyter Notebook

--- a/DNPVPy.ipynb
+++ b/DNPVPy.ipynb
@@ -24,8 +24,10 @@
     "import numpy as np\n",
     "import numpy_financial as npf\n",
     "import pandas as pd\n",
+    "import openpyxl as xl \n",
     "import matplotlib.pyplot as plt\n",
-    "from matplotlib.dates import DateFormatter"
+    "from matplotlib.dates import DateFormatter\n",
+    "from openpyxl import Workbook"
    ]
   },
   {
@@ -145,20 +147,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getcashflowitems(xcelfile,srows=0, sheet_name ='DNPV Input', scols=0,fmt=''):\n",
+    "def getcashflowitems(xcl_file, srows=0, scols=0, sheet ='DNPV Input', fmt=''):\n",
     "  '''\n",
-    "  Retrieves data from excel file found in a tab 'DNPV Input' and stores it in a 2D panda data structure. \n",
+    "  Retrieves rows of data from an excel file stored in worksheet 'DNPV Input'\n",
+    "  Each line represents revenues or costs that are considered random\n",
+    "  Date is retrieved and stored it in a dictionary (df_dict) and panda dataframe (dfT) \n",
     "  Typical panda data structure have labels in the 1st row and data in columns\n",
     "  To be used for data in xcelfile formatted in rows with id labes located in the 1st column. \n",
-    "  Creates a dictionary with the excel data (df_dict) and a panda file (dfT) with labels in the 1st row \n",
     "  The first row of data could be located srows below\n",
     "  '''  \n",
+    "\n",
     "  if fmt=='':\n",
     "    fmt = '${:,.0f}'     \n",
     "\n",
     "  pd.options.display.float_format = fmt.format\n",
     "  \n",
-    "  df = pd.read_excel(xcelfile, sheet_name,skiprows=srows,header=None)\n",
+    "  df = pd.read_excel(xcl_file, sheet, skiprows = srows, header=None)\n",
+    "\n",
     "  nrows = len(df)\n",
     "  ncolumns = len(df.columns) \n",
     "  df_dict = {}\n",
@@ -169,7 +174,7 @@
     "    for j in range(1,ncolumns):\n",
     "      values.append(df.iloc[i][j])\n",
     "    df_dict[keys] = values\n",
-    "  dfT = pd.DataFrame(df_dict)\n",
+    "  dfT = pd.DataFrame(df_dict).T\n",
     "\n",
     "  return df_dict, dfT  \n",
     "  "
@@ -178,6 +183,25 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "6a0e887c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    #Testing kernel to be removed\n",
+    "    CFfilename = 'Solar Project 2024.xlsx'\n",
+    "    input_sht = 'DNPV Input' \n",
+    "    output_sht = 'DNPV Output' \n",
+    "    rowloc = 10\n",
+    "\n",
+    "    #get cashflow items in a dictionary and panda dataframe formats\n",
+    "    #cashflow, dfT = getcashflowitems(CFfilename, sheet = input_sht, srows = rowloc)\n",
+    "    #cashflow\n",
+    "    #CFfilename, input_sht, rowloc    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "0f0d8e7a",
    "metadata": {},
    "outputs": [],
@@ -186,21 +210,27 @@
     "    #This is a placeholder for later implementation. \n",
     "    #At the moment, they are simply assigned and stored in a list call rp\n",
     "    #Each risk should be interactively assigned via pulldown menus\n",
+    "    #{Risk Key,[CF item, time independent risk, normalized risk cost]}\n",
+    "    #Also sets up the risk allocation factors for each run\n",
     "    \n",
     "    rp={}\n",
+    "    ras={}\n",
     "\n",
     "    #Solar risk (revenue reduction)\n",
     "    rp['Solar Risk']=['Revenues', True, Risk_normal(1164, 1088, 0.9)]\n",
+    "    ras['Solar Risk']=[1]\n",
     "            \n",
     "    #Maintence Risk (cost increase)\n",
     "    p=[0.8,0.2]\n",
     "    x=[1.0,1.25]\n",
     "    rp['Maintenance Risk']=['Maintenance', True, Risk_multinomial(p,x, ex = False,revenue=False)]\n",
+    "    ras['Maintenance Risk']=[1]\n",
     "\n",
     "    #Political Risk: FiT reduction (revenue reduction)\n",
     "    p=[0.865,0.12,0.015]\n",
     "    x=[0.43,0.28,0.06]\n",
     "    rp['Political Risk']=['Revenues', False, Risk_multinomial(p,x, ex = False)]\n",
+    "    ras['Political Risk']=[1]\n",
     " \n",
     "    return rp\n",
     "\n"
@@ -208,7 +238,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
+   "id": "1e891fbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def risk_alloc(riskparam, nruns=1):\n",
+    "#This fucntion needs to be written to set the risk allocation factors for nruns\n",
+    "#for now the are all set = 1 for nruns = 1 else it should be read from excel\n",
+    "\n",
+    "  rsk_alloc = {}\n",
+    "  for key in list(riskparam.keys()):\n",
+    "    rsk_alloc[key]=[1]\n",
+    "\n",
+    "  for _ in range(nruns-1):\n",
+    "    for key in list(riskparam.keys()):\n",
+    "      rsk_alloc[key].append(1)\n",
+    "  rsk_alloc['Political Risk']=[1,0.5,0]\n",
+    "       \n",
+    "  return rsk_alloc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "84a5463b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rp = riskparameters()\n",
+    "raf = risk_alloc(rp,3)\n",
+    "raf['Political Risk'][2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "d632bd3b",
    "metadata": {},
    "outputs": [],
@@ -218,18 +294,19 @@
     "  def __init__(self, label, vector, fctr=1, keyparameters={}, time = 'Year', d=0):\n",
     "    self.dict ={}                 #initialize dictionario of risks\n",
     "    self.l = len(vector)          #vector length\n",
-    "    self.d = d                    #rounding decimal for print\n",
+    "    self.d = d                    #rounding decimal for printing\n",
     "    self.keyp = keyparameters     #dictionary containing all risk parameters used\n",
     "    \n",
+    "    #create a list with time period & assign it to dict\n",
     "    period = [i+1 for i in range(len(vector))]\n",
     "    self.dict[time] = period\n",
     "    \n",
-    "    if fctr!=1.0:\n",
+    "    if fctr != 1.0:\n",
     "      vector = [x*fctr for x in vector]\n",
     "    self.dict[label] = vector\n",
     "\n",
     "  def assign(self,label,vector,fctr=1):\n",
-    "    if fctr!=1.0:\n",
+    "    if fctr != 1.0:\n",
     "      vector = [x*fctr for x in vector]\n",
     "    self.dict[label] = vector\n",
     "\n",
@@ -262,12 +339,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "82ebce74",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def DNPVelements(cashflow, riskparameters, sumkey='Sum Risk', rcfkey='DNPV-CF'):\n",
+    "def DNPVcost_of_risk_vectors(cashflow, riskparameters, sumkey='Sum Risk', rcfkey='DNPV-CF'):\n",
+    "  #ADD Risk alloca *****\n",
+    "\n",
     "  global rate_f, tax\n",
     "  risk = None\n",
     " \n",
@@ -287,6 +366,7 @@
     "            nriskcost = 1\n",
     "\n",
     "        if risk == None: \n",
+    "            #initiates the 1st value of the dictionary\n",
     "            risk = Risk(key,vector, nriskcost, d=1)\n",
     "            risk.keyp = riskparameters\n",
     "        else: \n",
@@ -295,17 +375,117 @@
     "  #Add all the calculated cost of risks and assign it to risk.dict[sumkey]  \n",
     "  risk.add(sumkey)\n",
     "\n",
-    "  #calculate the riskless cashflows and assign it to risk.dict[k2]  \n",
+    "  #calculate the riskless cashflows vector and assign it to risk.dict[rcfkey]  \n",
     "  key0 = list(cashflow.keys())[-1]\n",
     "  risk.sub(rcfkey, cashflow[key0],risk.dict[sumkey],fb = 1-tax)\n",
-    "    \n",
+    "   \n",
     "  return risk, rcfkey\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
+   "id": "edef46ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cost_of_risk_vectors(cashflow, riskparameters, rsk_alloc, sumkey, rcfkey, r_f=0, tax=0, run=1):\n",
+    "\n",
+    "  #global rate_f, tax\n",
+    "  risk = None\n",
+    " \n",
+    "  for key in list(riskparameters.keys()):\n",
+    "        cfitem, tind, nriskcost = riskparameters[key]\n",
+    "        raf = rsk_alloc[key][run-1]\n",
+    "        vector = cashflow[cfitem]\n",
+    "\n",
+    "        if tind == False:    \n",
+    "            dim = len(vector)  \n",
+    "            tvector=[]\n",
+    "            for i in range(dim):\n",
+    "              sum = 0\n",
+    "              for j in range(i,dim):\n",
+    "                sum = sum + vector[j]/pow(1+r_f+nriskcost,j-i+1)\n",
+    "              tvector.append(sum*nriskcost)\n",
+    "            vector = tvector\n",
+    "            nriskcost = 1\n",
+    "\n",
+    "        if risk == None: \n",
+    "            #initiates the 1st value of the dictionary\n",
+    "            risk = Risk(key,vector, nriskcost*raf, d=1)\n",
+    "            risk.keyp = riskparameters\n",
+    "        else: \n",
+    "            risk.assign(key, vector, nriskcost*raf)\n",
+    "\n",
+    "  #Add all the calculated cost of risks and assign it to risk.dict[sumkey]  \n",
+    "  risk.add(sumkey)\n",
+    "\n",
+    "  #calculate the riskless cashflows vector and assign it to risk.dict[rcfkey]  \n",
+    "  key0 = list(cashflow.keys())[-1]\n",
+    "  risk.sub(rcfkey, cashflow[key0],risk.dict[sumkey],fb = 1-tax)\n",
+    "   \n",
+    "  return risk\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "eef4d0ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_pd_toxcl(xcl_file, output_sheet = '', data={},fmt=''):\n",
+    "  #writes the results from a pd dataframe to excel\n",
+    "    \n",
+    "  if output_sheet in list(pd.ExcelFile(xcl_file).sheet_names):\n",
+    "    sheet_status='overlay'\n",
+    "  else:\n",
+    "    sheet_status='new'\n",
+    "\n",
+    "  if fmt=='':\n",
+    "    fmt = '${:,.0f}'     \n",
+    "\n",
+    "  pd.options.display.float_format = fmt.format\n",
+    "\n",
+    "  risk_pdmatrix = pd.DataFrame(data).T\n",
+    "\n",
+    "  with pd.ExcelWriter(xcl_file, mode='a', if_sheet_exists=sheet_status) as writer:     \n",
+    "    risk_pdmatrix.to_excel(writer, sheet_name = output_sheet, header=False)  \n",
+    "  \n",
+    "  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "34b25618",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_dict_to_xl(xcl_file, output_sheet='', sheet_loc = 4, data = {}):\n",
+    "  #writes the results from a dict to excel\n",
+    "    \n",
+    "  wb = xl.load_workbook(xcl_file)\n",
+    "  sheetnames = list(wb.sheetnames)\n",
+    "\n",
+    "  if output_sheet in sheetnames:\n",
+    "    ws = wb[output_sheet]\n",
+    "    wb.remove(ws)\n",
+    "\n",
+    "  risk_pd = pd.DataFrame(data).T\n",
+    "\n",
+    "  with pd.ExcelWriter(xcl_file, mode='a') as writer:     \n",
+    "    risk_pd.to_excel(writer, sheet_name = output_sheet, header=False)  \n",
+    "\n",
+    "  ws = wb[output_sheet]\n",
+    "  ws.delete_col[0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "da6c2a77",
    "metadata": {
     "scrolled": true
@@ -556,7 +736,7 @@
        "19    20     $60,337            $9,996        $150,153   $220,485 $1,787,772"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,43 +745,87 @@
     "    #Obtain the items needed to estimate the cost of risks\n",
     "    #Excel tab should have the rows with data affecred by risk\n",
     "    #All the data below should be provided \n",
-    "    \n",
-    "    tax = 0.333     #corporate tax rate\n",
-    "    rate_f = 0.028  #risk-free rate\n",
-    "    wacc = 0.13     #investor's capital cost\n",
     "\n",
+    "    dnpv_cases = []\n",
+    "\n",
+    "    #Parameters assigned that need to be input\n",
+    "    corptax = 0.333     #corporate tax rate\n",
+    "    rate_f = 0.028  #risk-free rate\n",
+    "    wacc = 0.10     #investor's capital cost\n",
     "    CFfilename = 'Solar Project 2024.xlsx'\n",
+    "    input_ws = 'DNPV Input' \n",
+    "    output_ws = 'DNPV Output' \n",
+    "    dnpv_key = 'DNPV-CF'\n",
+    "    sum_key = 'Sum Risk'\n",
     "    rowloc = 10\n",
+    "    runtot = 1\n",
     "\n",
     "    #get cashflow items in a dictionary and panda dataframe formats\n",
-    "    cashflow, dfT = getcashflowitems(CFfilename,rowloc)\n",
+    "    cashflow, dfT = getcashflowitems(CFfilename, sheet = input_ws, srows = rowloc)\n",
     "\n",
     "    #get the risk parameters in a dictionary format to calculate DNPV\n",
     "    rp = riskparameters()\n",
-    "\n",
-    "    #get the cost of risk line items and calculate the DNPV riskless cash flows\n",
-    "    risk, keydnpv = DNPVelements(cashflow, rp)    \n",
-    "\n",
-    "    dnpvvec = risk.dict[keydnpv]\n",
     "    \n",
-    "    init = [0]  # to be included as period 0 if teh cashflows do not include t=0 data\n",
-    "    \n",
-    "    dnpv = npf.npv(rate_f,init+dnpvvec)\n",
+    "    #gets the risk allocation for each DNPV run \n",
+    "    rsk_alloc = risk_alloc(rp, runtot)\n",
+    " \n",
+    "    #calculate cost of risk items & DNPV cash flows and store them in risk dict, provide key to DNPV \n",
+    "    #risk, keydnpv = DNPVcost_of_risk_vectors(cashflow, rp)\n",
+    "    for i in range(runtot):\n",
+    "      risk = cost_of_risk_vectors(cashflow, rp, rsk_alloc, sum_key, dnpv_key, r_f = rate_f, tax = corptax)    \n",
     "\n",
-    "    keycf = list(cashflow.keys())[-1]\n",
-    "    npv  = npf.npv(wacc,init+cashflow[keycf])\n",
+    "      #using the DNPV key, read riskless cash flows \n",
+    "      dnpvvec = risk.dict[dnpv_key]\n",
+    "    \n",
+    "      init = [0]  # to be included as period 0 if teh cashflows do not include t=0 data\n",
+    "    \n",
+    "      dnpv = npf.npv(rate_f,init+dnpvvec)\n",
     "\n",
     "    print(f\"DNPV: ${dnpv:,.0f}\" )   \n",
     "\n",
-    "    risk_pdmatrix = pd.DataFrame(risk.dict)\n",
-    "    risk_pdmatrix\n",
-    "    "
+    "    #Get the last key \n",
+    "    keycf = list(cashflow.keys())[-1]\n",
+    "\n",
+    "    npv  = npf.npv(wacc,init+cashflow[keycf])\n",
+    "\n",
+    "\n",
+    "    #write_pd_toxcl(CFfilename, output_ws, risk.dict)        \n",
+    "\n",
+    "    pd.DataFrame(risk.dict)\n",
+    " \n",
+    "    #cashflow, rp\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "82c04a7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2, 3], [1, 2, 13]]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=[]\n",
+    "a.append([1, 2, 3])  \n",
+    "a.append([1, 2, 13])  \n",
+    "a"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "584a48d9",
+   "id": "df4d2099",
    "metadata": {},
    "outputs": [],
    "source": []
