Add Jupyter Notebook

--- a/DNPVPy.ipynb
+++ b/DNPVPy.ipynb
@@ -214,23 +214,19 @@
     "    #Also sets up the risk allocation factors for each run\n",
     "    \n",
     "    rp={}\n",
-    "    ras={}\n",
     "\n",
     "    #Solar risk (revenue reduction)\n",
     "    rp['Solar Risk']=['Revenues', True, Risk_normal(1164, 1088, 0.9)]\n",
-    "    ras['Solar Risk']=[1]\n",
     "            \n",
     "    #Maintence Risk (cost increase)\n",
     "    p=[0.8,0.2]\n",
     "    x=[1.0,1.25]\n",
     "    rp['Maintenance Risk']=['Maintenance', True, Risk_multinomial(p,x, ex = False,revenue=False)]\n",
-    "    ras['Maintenance Risk']=[1]\n",
     "\n",
     "    #Political Risk: FiT reduction (revenue reduction)\n",
     "    p=[0.865,0.12,0.015]\n",
     "    x=[0.43,0.28,0.06]\n",
     "    rp['Political Risk']=['Revenues', False, Risk_multinomial(p,x, ex = False)]\n",
-    "    ras['Political Risk']=[1]\n",
     " \n",
     "    return rp\n",
     "\n"
@@ -238,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "1e891fbd",
    "metadata": {},
    "outputs": [],
@@ -248,38 +244,23 @@
     "#for now the are all set = 1 for nruns = 1 else it should be read from excel\n",
     "\n",
     "  rsk_alloc = {}\n",
+    "  run1 = [1, 1, 0.5]\n",
+    "  run2 = [1, 1, 0.0]\n",
+    "\n",
     "  for key in list(riskparam.keys()):\n",
     "    rsk_alloc[key]=[1]\n",
     "\n",
-    "  for _ in range(nruns-1):\n",
+    "  if nruns>=2:\n",
     "    for key in list(riskparam.keys()):\n",
-    "      rsk_alloc[key].append(1)\n",
-    "  rsk_alloc['Political Risk']=[1,0.5,0]\n",
-    "       \n",
+    "      ind = list(riskparam).index(key)  \n",
+    "      rsk_alloc[key].append(run1[ind])\n",
+    "\n",
+    "  if nruns==3:\n",
+    "    for key in list(riskparam.keys()):\n",
+    "      ind = list(riskparam).index(key)  \n",
+    "      rsk_alloc[key].append(run2[ind])\n",
+    "        \n",
     "  return rsk_alloc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "84a5463b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rp = riskparameters()\n",
-    "raf = risk_alloc(rp,3)\n",
-    "raf['Political Risk'][2]"
    ]
   },
   {
@@ -339,52 +320,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "82ebce74",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def DNPVcost_of_risk_vectors(cashflow, riskparameters, sumkey='Sum Risk', rcfkey='DNPV-CF'):\n",
-    "  #ADD Risk alloca *****\n",
-    "\n",
-    "  global rate_f, tax\n",
-    "  risk = None\n",
-    " \n",
-    "  for key in list(riskparameters.keys()):\n",
-    "        cfitem, tind, nriskcost = riskparameters[key]\n",
-    "        vector = cashflow[cfitem]\n",
-    "\n",
-    "        if tind == False:    \n",
-    "            dim = len(vector)  \n",
-    "            tvector=[]\n",
-    "            for i in range(dim):\n",
-    "              sum = 0\n",
-    "              for j in range(i,dim):\n",
-    "                sum = sum + vector[j]/pow(1+rate_f+nriskcost,j-i+1)\n",
-    "              tvector.append(sum*nriskcost)\n",
-    "            vector = tvector\n",
-    "            nriskcost = 1\n",
-    "\n",
-    "        if risk == None: \n",
-    "            #initiates the 1st value of the dictionary\n",
-    "            risk = Risk(key,vector, nriskcost, d=1)\n",
-    "            risk.keyp = riskparameters\n",
-    "        else: \n",
-    "            risk.assign(key, vector, nriskcost)\n",
-    "\n",
-    "  #Add all the calculated cost of risks and assign it to risk.dict[sumkey]  \n",
-    "  risk.add(sumkey)\n",
-    "\n",
-    "  #calculate the riskless cashflows vector and assign it to risk.dict[rcfkey]  \n",
-    "  key0 = list(cashflow.keys())[-1]\n",
-    "  risk.sub(rcfkey, cashflow[key0],risk.dict[sumkey],fb = 1-tax)\n",
-    "   \n",
-    "  return risk, rcfkey\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "id": "edef46ab",
    "metadata": {},
@@ -392,7 +327,6 @@
    "source": [
     "def cost_of_risk_vectors(cashflow, riskparameters, rsk_alloc, sumkey, rcfkey, r_f=0, tax=0, run=1):\n",
     "\n",
-    "  #global rate_f, tax\n",
     "  risk = None\n",
     " \n",
     "  for key in list(riskparameters.keys()):\n",
@@ -412,7 +346,7 @@
     "            nriskcost = 1\n",
     "\n",
     "        if risk == None: \n",
-    "            #initiates the 1st value of the dictionary\n",
+    "            #initiates the 1st vector of the dictionary and setup risk parameters\n",
     "            risk = Risk(key,vector, nriskcost*raf, d=1)\n",
     "            risk.keyp = riskparameters\n",
     "        else: \n",
@@ -485,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "id": "da6c2a77",
    "metadata": {
     "scrolled": true
@@ -495,250 +429,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DNPV: $15,265,231\n"
+      "Case 0 DNPV: $1,265,231 & NPV: $-241,190 \n",
+      "Case 1 DNPV: $5,976,366 & NPV: $-241,190 \n",
+      "Case 2 DNPV: $10,687,501 & NPV: $1,992,973 \n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Solar Risk</th>\n",
-       "      <th>Maintenance Risk</th>\n",
-       "      <th>Political Risk</th>\n",
-       "      <th>Sum Risk</th>\n",
-       "      <th>DNPV-CF</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>$40,729</td>\n",
-       "      <td>$6,253</td>\n",
-       "      <td>$1,227,011</td>\n",
-       "      <td>$1,273,992</td>\n",
-       "      <td>$616,006</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>$41,580</td>\n",
-       "      <td>$6,409</td>\n",
-       "      <td>$1,218,822</td>\n",
-       "      <td>$1,266,811</td>\n",
-       "      <td>$642,061</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>$42,449</td>\n",
-       "      <td>$6,569</td>\n",
-       "      <td>$1,207,662</td>\n",
-       "      <td>$1,256,680</td>\n",
-       "      <td>$670,445</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>$43,336</td>\n",
-       "      <td>$6,733</td>\n",
-       "      <td>$1,193,236</td>\n",
-       "      <td>$1,243,305</td>\n",
-       "      <td>$701,357</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>$44,242</td>\n",
-       "      <td>$6,902</td>\n",
-       "      <td>$1,175,226</td>\n",
-       "      <td>$1,226,369</td>\n",
-       "      <td>$735,014</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6</td>\n",
-       "      <td>$45,166</td>\n",
-       "      <td>$7,074</td>\n",
-       "      <td>$1,153,284</td>\n",
-       "      <td>$1,205,525</td>\n",
-       "      <td>$771,650</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7</td>\n",
-       "      <td>$46,110</td>\n",
-       "      <td>$7,251</td>\n",
-       "      <td>$1,127,035</td>\n",
-       "      <td>$1,180,396</td>\n",
-       "      <td>$811,520</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8</td>\n",
-       "      <td>$47,074</td>\n",
-       "      <td>$7,432</td>\n",
-       "      <td>$1,096,070</td>\n",
-       "      <td>$1,150,576</td>\n",
-       "      <td>$854,899</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>9</td>\n",
-       "      <td>$48,058</td>\n",
-       "      <td>$7,618</td>\n",
-       "      <td>$1,059,945</td>\n",
-       "      <td>$1,115,621</td>\n",
-       "      <td>$902,087</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>10</td>\n",
-       "      <td>$49,062</td>\n",
-       "      <td>$7,809</td>\n",
-       "      <td>$1,018,179</td>\n",
-       "      <td>$1,075,050</td>\n",
-       "      <td>$953,406</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>11</td>\n",
-       "      <td>$50,088</td>\n",
-       "      <td>$8,004</td>\n",
-       "      <td>$970,249</td>\n",
-       "      <td>$1,028,341</td>\n",
-       "      <td>$1,009,208</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>12</td>\n",
-       "      <td>$51,135</td>\n",
-       "      <td>$8,204</td>\n",
-       "      <td>$915,590</td>\n",
-       "      <td>$974,929</td>\n",
-       "      <td>$1,069,874</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>13</td>\n",
-       "      <td>$52,203</td>\n",
-       "      <td>$8,409</td>\n",
-       "      <td>$853,586</td>\n",
-       "      <td>$914,198</td>\n",
-       "      <td>$1,135,814</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>14</td>\n",
-       "      <td>$53,294</td>\n",
-       "      <td>$8,619</td>\n",
-       "      <td>$783,570</td>\n",
-       "      <td>$845,484</td>\n",
-       "      <td>$1,207,478</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>15</td>\n",
-       "      <td>$54,408</td>\n",
-       "      <td>$8,835</td>\n",
-       "      <td>$704,820</td>\n",
-       "      <td>$768,063</td>\n",
-       "      <td>$1,285,347</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>16</td>\n",
-       "      <td>$55,545</td>\n",
-       "      <td>$9,056</td>\n",
-       "      <td>$616,550</td>\n",
-       "      <td>$681,151</td>\n",
-       "      <td>$1,369,948</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>17</td>\n",
-       "      <td>$56,706</td>\n",
-       "      <td>$9,282</td>\n",
-       "      <td>$517,910</td>\n",
-       "      <td>$583,898</td>\n",
-       "      <td>$1,461,849</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>18</td>\n",
-       "      <td>$57,891</td>\n",
-       "      <td>$9,514</td>\n",
-       "      <td>$407,978</td>\n",
-       "      <td>$475,383</td>\n",
-       "      <td>$1,561,665</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>19</td>\n",
-       "      <td>$59,101</td>\n",
-       "      <td>$9,752</td>\n",
-       "      <td>$285,753</td>\n",
-       "      <td>$354,607</td>\n",
-       "      <td>$1,670,065</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>20</td>\n",
-       "      <td>$60,337</td>\n",
-       "      <td>$9,996</td>\n",
-       "      <td>$150,153</td>\n",
-       "      <td>$220,485</td>\n",
-       "      <td>$1,787,772</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Year  Solar Risk  Maintenance Risk  Political Risk   Sum Risk    DNPV-CF\n",
-       "0      1     $40,729            $6,253      $1,227,011 $1,273,992   $616,006\n",
-       "1      2     $41,580            $6,409      $1,218,822 $1,266,811   $642,061\n",
-       "2      3     $42,449            $6,569      $1,207,662 $1,256,680   $670,445\n",
-       "3      4     $43,336            $6,733      $1,193,236 $1,243,305   $701,357\n",
-       "4      5     $44,242            $6,902      $1,175,226 $1,226,369   $735,014\n",
-       "5      6     $45,166            $7,074      $1,153,284 $1,205,525   $771,650\n",
-       "6      7     $46,110            $7,251      $1,127,035 $1,180,396   $811,520\n",
-       "7      8     $47,074            $7,432      $1,096,070 $1,150,576   $854,899\n",
-       "8      9     $48,058            $7,618      $1,059,945 $1,115,621   $902,087\n",
-       "9     10     $49,062            $7,809      $1,018,179 $1,075,050   $953,406\n",
-       "10    11     $50,088            $8,004        $970,249 $1,028,341 $1,009,208\n",
-       "11    12     $51,135            $8,204        $915,590   $974,929 $1,069,874\n",
-       "12    13     $52,203            $8,409        $853,586   $914,198 $1,135,814\n",
-       "13    14     $53,294            $8,619        $783,570   $845,484 $1,207,478\n",
-       "14    15     $54,408            $8,835        $704,820   $768,063 $1,285,347\n",
-       "15    16     $55,545            $9,056        $616,550   $681,151 $1,369,948\n",
-       "16    17     $56,706            $9,282        $517,910   $583,898 $1,461,849\n",
-       "17    18     $57,891            $9,514        $407,978   $475,383 $1,561,665\n",
-       "18    19     $59,101            $9,752        $285,753   $354,607 $1,670,065\n",
-       "19    20     $60,337            $9,996        $150,153   $220,485 $1,787,772"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -747,85 +441,74 @@
     "    #All the data below should be provided \n",
     "\n",
     "    dnpv_cases = []\n",
+    "    dnpv_results = []\n",
+    "    npv_results = []\n",
     "\n",
     "    #Parameters assigned that need to be input\n",
-    "    corptax = 0.333     #corporate tax rate\n",
+    "    cotax = 0.333     #corporate tax rate\n",
     "    rate_f = 0.028  #risk-free rate\n",
-    "    wacc = 0.10     #investor's capital cost\n",
+    "    runtot = 3                   #Number of cases\n",
+    "    wacc = [0.10, 0.1, 0.08]     #investor's capital cost\n",
+    "    cost = 14e6                  #project cost\n",
     "    CFfilename = 'Solar Project 2024.xlsx'\n",
     "    input_ws = 'DNPV Input' \n",
     "    output_ws = 'DNPV Output' \n",
     "    dnpv_key = 'DNPV-CF'\n",
     "    sum_key = 'Sum Risk'\n",
     "    rowloc = 10\n",
-    "    runtot = 1\n",
+    "    time0 = False #Cash flow data does not start from t = 0\n",
     "\n",
     "    #get cashflow items in a dictionary and panda dataframe formats\n",
     "    cashflow, dfT = getcashflowitems(CFfilename, sheet = input_ws, srows = rowloc)\n",
     "\n",
-    "    #get the risk parameters in a dictionary format to calculate DNPV\n",
+    "    #get the risk parameters in a dictionary format to calculate DNPV cash flows\n",
     "    rp = riskparameters()\n",
     "    \n",
-    "    #gets the risk allocation for each DNPV run \n",
+    "    #gets the risk allocation factors for each DNPV run to be performed \n",
     "    rsk_alloc = risk_alloc(rp, runtot)\n",
     " \n",
-    "    #calculate cost of risk items & DNPV cash flows and store them in risk dict, provide key to DNPV \n",
-    "    #risk, keydnpv = DNPVcost_of_risk_vectors(cashflow, rp)\n",
+    "    #calculate cost of risk items & DNPV cash flows and store them in risk dict \n",
+    "    \n",
+    "    if not time0:\n",
+    "      init = [0]  # to be included as period 0 if cashflows do not include t=0 data (initial costs)\n",
+    "      cost0 = cost\n",
+    "    else:\n",
+    "      init = []\n",
+    "      cost0 = 0\n",
+    "    \n",
     "    for i in range(runtot):\n",
-    "      risk = cost_of_risk_vectors(cashflow, rp, rsk_alloc, sum_key, dnpv_key, r_f = rate_f, tax = corptax)    \n",
+    "      risk = cost_of_risk_vectors(cashflow, rp, rsk_alloc, sum_key, dnpv_key, r_f =rate_f, tax=cotax, run = i+1)    \n",
     "\n",
     "      #using the DNPV key, read riskless cash flows \n",
     "      dnpvvec = risk.dict[dnpv_key]\n",
+    "       \n",
+    "      dnpv = npf.npv(rate_f,init+dnpvvec)-cost0\n",
+    "      npv  = npf.npv(wacc[i],init+cashflow[keycf])-cost0\n",
+    "        \n",
+    "      dnpv_cases.append(risk.dict) \n",
+    "      dnpv_results.append(dnpv)\n",
+    "      npv_results.append(npv)\n",
     "    \n",
-    "      init = [0]  # to be included as period 0 if teh cashflows do not include t=0 data\n",
-    "    \n",
-    "      dnpv = npf.npv(rate_f,init+dnpvvec)\n",
+    "      print(f\"Case{i:2d} DNPV: ${dnpv_results[i]:,.0f} & NPV: ${npv_results[i]:,.0f} \")   \n",
     "\n",
-    "    print(f\"DNPV: ${dnpv:,.0f}\" )   \n",
-    "\n",
+    "      pd.DataFrame(risk.dict)\n",
+    "        \n",
     "    #Get the last key \n",
     "    keycf = list(cashflow.keys())[-1]\n",
     "\n",
-    "    npv  = npf.npv(wacc,init+cashflow[keycf])\n",
+    "    #print(f\"NPV: ${npv:,.0f} \" )   \n",
     "\n",
     "\n",
     "    #write_pd_toxcl(CFfilename, output_ws, risk.dict)        \n",
     "\n",
-    "    pd.DataFrame(risk.dict)\n",
-    " \n",
-    "    #cashflow, rp\n",
-    "    \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "82c04a7f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[1, 2, 3], [1, 2, 13]]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a=[]\n",
-    "a.append([1, 2, 3])  \n",
-    "a.append([1, 2, 13])  \n",
-    "a"
+    "    #pd.DataFrame(risk.dict)\n",
+    " \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df4d2099",
+   "id": "0aae6fde",
    "metadata": {},
    "outputs": [],
    "source": []
