revision funciones int_ab y Risknormal, sugerencia de cambio

--- a/DNPVPy.ipynb
+++ b/DNPVPy.ipynb
@@ -12,32 +12,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "be38071b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "%pip install numpy_financial\n",
+    "%pip install pandas\n",
+    "%pip install openpyxl\n",
+    "%pip install matplotlib\n",
+    "\n",
     "import os\n",
     "import glob\n",
-    "import xlrd\n",
+    "#import xlrd\n",
     "import scipy.stats as st\n",
+    "from scipy.stats import norm\n",
     "import numpy as np\n",
     "import numpy_financial as npf\n",
     "import pandas as pd\n",
     "import openpyxl as xl \n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.dates import DateFormatter\n",
-    "from openpyxl import Workbook"
+    "from openpyxl import Workbook\n",
+    "\n",
+    "from scipy.integrate import quad"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "85746b4a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def int_ab(Fx, xc, a, b, ns=1000):\n",
+    "def int_ab(Fx, xc, a, b, ns=1000):  #xc y ns no los uso\n",
     "  '''\n",
     "  Calculates the area (Aab)and center of gravity (cg) by numerical integration from a to b  \n",
     "  of a 1D function Fx with respect to xc where ns is the discretization parameter.\n",
@@ -48,8 +56,7 @@
     "  :type b:float (upper limit)\n",
     "  :type xc:float reference point\n",
     "  :type ns:int discritization parameter\n",
-    "  ''' \n",
-    "\n",
+    "  \n",
     "  delta = (b - a)/ns\n",
     "  x2= a  \n",
     "  Aab = 0\n",
@@ -62,7 +69,26 @@
     "    Aab = Aab + dA\n",
     "    momX = momX + dA*(xm-xc)\n",
     "  cg = momX/Aab\n",
+    "  ''' \n",
+    " \n",
+    "  Aab, _ = quad(Fx, a, b) # Calcular el área bajo la curva A\n",
+    "  M, _ = quad(lambda x: x * Fx(x), a, b) # Calcular el momento M\n",
+    "\n",
+    "  # Calcular el centro de gravedad\n",
+    "  if Aab != 0:\n",
+    "      cg = M / Aab\n",
+    "  else:\n",
+    "      raise ValueError(\"El área bajo la curva es cero. No se puede calcular el centro de gravedad.\")\n",
+    "\n",
     "  return Aab, cg"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7998754",
+   "metadata": {},
+   "source": [
+    "####  Cambiaría la siguiente función a tener solo 2 parámetros: P50 y sig"
    ]
   },
   {
@@ -95,6 +121,24 @@
     "  CostofRisk = cgd*sig*area\n",
     "  if abs(p50)> 0: CostofRisk = CostofRisk/p50  \n",
     "  return CostofRisk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f0161cbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9986501019683699\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1-norm.cdf(-3, loc=0, scale=1))"
    ]
   },
   {
@@ -516,7 +560,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -530,7 +574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
